@@ -2,5 +2,5 @@
   <dllmap dll="libglib-2.0-0.dll" target="libglib-2.0.so.0"/>
   <dllmap dll="libgobject-2.0-0.dll" target="libgobject-2.0.so.0"/>
   <dllmap dll="libgnomevfs-2-0.dll" target="libgnomevfs-2.so.0"/>
-  <dllmap dll="libmuine" target="@prefix@/lib/muine/libmuine.so"/>
+  <dllmap dll="libmuine" target="@pkglibdir@/libmuine.so"/>
 </configuration>
