@@ -1,5 +1,14 @@
 2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
 
+	* configure.in:
+	* src/Makefile.am:
+	* src/muine.exe.config.in:
+	* src/muine.in:
+
+	Use @pkglibdir@ in src/*.in.
+
+2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
+
 	* libmuine/Makefile.am:
 	R libmuine/gettext-utils.c:
 	R libmuine/gettext-utils.h:
